feat: basic single-spa framework

--- a/SingleSPA/02.singlespa-basic/react-application/package.json
+++ b/SingleSPA/02.singlespa-basic/react-application/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "@demo-react/demo-react",
+  "name": "@demo/react-spa",
   "scripts": {
     "start": "webpack serve",
     "start:standalone": "webpack serve --env standalone",
